Update project links and add loading="lazy" attribute on project images.

--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
                                     </a>
                                 </button>
                                 <button class="social-button social-button2" title="github button">
-                                    <a class="github-button" href="https://github.com/" target="_blank" title="my github profile">
+                                    <a class="github-button" href="https://github.com/Ryo-samurai6340/" target="_blank" title="my github profile">
                                         <svg id="github" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z"/>
                                         </svg>
                                     </a>    
                                 </button>
                                 <button class="social-button social-button3" title="discord button">
-                                    <a class="discord-button" href="https://discordapp.com/users/1233363421207199827" target="_blank" title="my github profile">
+                                    <a class="discord-button" href="https://discordapp.com/users/1233363421207199827/" target="_blank" title="my github profile">
                                         <svg id="discord" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19.3034 5.33716C17.9344 4.71103 16.4805 4.2547 14.9629 4C14.7719 4.32899 14.5596 4.77471 14.411 5.12492C12.7969 4.89144 11.1944 4.89144 9.60255 5.12492C9.45397 4.77471 9.2311 4.32899 9.05068 4C7.52251 4.2547 6.06861 4.71103 4.70915 5.33716C1.96053 9.39111 1.21766 13.3495 1.5891 17.2549C3.41443 18.5815 5.17612 19.388 6.90701 19.9187C7.33151 19.3456 7.71356 18.73 8.04255 18.0827C7.41641 17.8492 6.82211 17.5627 6.24904 17.2231C6.39762 17.117 6.5462 17.0003 6.68416 16.8835C10.1438 18.4648 13.8911 18.4648 17.3082 16.8835C17.4568 17.0003 17.5948 17.117 17.7434 17.2231C17.1703 17.5627 16.576 17.8492 15.9499 18.0827C16.2789 18.73 16.6609 19.3456 17.0854 19.9187C18.8152 19.388 20.5875 18.5815 22.4033 17.2549C22.8596 12.7341 21.6806 8.80747 19.3034 5.33716ZM8.5201 14.8459C7.48007 14.8459 6.63107 13.9014 6.63107 12.7447C6.63107 11.5879 7.45884 10.6434 8.5201 10.6434C9.57071 10.6434 10.4303 11.5879 10.4091 12.7447C10.4091 13.9014 9.57071 14.8459 8.5201 14.8459ZM15.4936 14.8459C14.4535 14.8459 13.6034 13.9014 13.6034 12.7447C13.6034 11.5879 14.4323 10.6434 15.4936 10.6434C16.5442 10.6434 17.4038 11.5879 17.3825 12.7447C17.3825 13.9014 16.5548 14.8459 15.4936 14.8459Z"></path>
                                         </svg>
                                     </a>
                                 </button>
                                 <button class="social-button social-button4" title="youtube button">
-                                    <a class="youtube-button" href="https://www.youtube.com/@rh.project_gallery" target="_blank" title="my github channel">
+                                    <a class="youtube-button" href="https://www.youtube.com/@rh.project_gallery/" target="_blank" title="my github channel">
                                         <svg id="youtube" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M12.2439 4C12.778 4.00294 14.1143 4.01586 15.5341 4.07273L16.0375 4.09468C17.467 4.16236 18.8953 4.27798 19.6037 4.4755C20.5486 4.74095 21.2913 5.5155 21.5423 6.49732C21.942 8.05641 21.992 11.0994 21.9982 11.8358L21.9991 11.9884L21.9991 11.9991C21.9991 11.9991 21.9991 12.0028 21.9991 12.0099L21.9982 12.1625C21.992 12.8989 21.942 15.9419 21.5423 17.501C21.2878 18.4864 20.5451 19.261 19.6037 19.5228C18.8953 19.7203 17.467 19.8359 16.0375 19.9036L15.5341 19.9255C14.1143 19.9824 12.778 19.9953 12.2439 19.9983L12.0095 19.9991L11.9991 19.9991C11.9991 19.9991 11.9956 19.9991 11.9887 19.9991L11.7545 19.9983C10.6241 19.9921 5.89772 19.941 4.39451 19.5228C3.4496 19.2573 2.70692 18.4828 2.45587 17.501C2.0562 15.9419 2.00624 12.8989 2 12.1625V11.8358C2.00624 11.0994 2.0562 8.05641 2.45587 6.49732C2.7104 5.51186 3.45308 4.73732 4.39451 4.4755C5.89772 4.05723 10.6241 4.00622 11.7545 4H12.2439ZM9.99911 8.49914V15.4991L15.9991 11.9991L9.99911 8.49914Z"></path>
                                         </svg>
@@ -216,22 +216,22 @@
                     <div class="swiper-wrapper">
                         <!-- PROJECT 1 -->
                         <div class="projects__content swiper-slide"> 
-                            <a href="https://AiVisualDoppelganger.onrender.com/" target="_blank">
-                                <img src="assets/img/proj1.jpg" alt="project image" class="projects__img">
+                            <a href="https://ai-visual-doppelganger.onrender.com/" target="_blank">
+                                <img src="assets/img/proj1.jpg" alt="project image" class="projects__img" loading="lazy">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Image replication web app</span>
                                 <h1 class="projects__title">AI Visual Doppelganger</h1>
                                 <div class="projects__button-contents" id="project1-buttons">
-                                    <a href="https://youtu.be/VT6eddrVVOA" target="_blank" class="projects__button">
+                                    <a href="https://youtu.be/VT6eddrVVOA/" target="_blank" class="projects__button">
                                         <span>Video demo</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>  
-                                    <a href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger" target="_blank" class="projects__button">
+                                    <a href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger/" target="_blank" class="projects__button">
                                         <span>Source code</span>
                                         <i class="ri-github-line"></i>
                                     </a>
-                                    <a href="https://AiVisualDoppelganger.onrender.com/" target="_blank" class="projects__button">
+                                    <a href="https://ai-visual-doppelganger.onrender.com/" target="_blank" class="projects__button">
                                         <span>Live demo</span>
                                         <i class="bi bi-globe2"></i>
                                     </a> 
@@ -240,18 +240,18 @@
                         </div>
                         <!-- PROJECT 2 -->
                         <div class="projects__content swiper-slide">
-                            <a href="https://youtu.be/N_yUfrnbgWI" target="_blank">
-                                <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img">
+                            <a href="https://youtu.be/N_yUfrnbgWI/" target="_blank">
+                                <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img" loading="lazy">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Food delivery app on Android</span>
                                 <h1 class="projects__title">PlateMate</h1>
                                 <div class="projects__button-contents" id="project2-buttons">
-                                    <a href="https://youtu.be/N_yUfrnbgWI" target="_blank" class="projects__button">
+                                    <a href="https://youtu.be/N_yUfrnbgWI/" target="_blank" class="projects__button">
                                         <span>Video demo</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>    
-                                    <a href="https://github.com/Ryo-samurai6340/PlateMate-food-delivery-Android-app" target="_blank" class="projects__button">
+                                    <a href="https://github.com/Ryo-samurai6340/PlateMate-food-delivery-Android-app/" target="_blank" class="projects__button">
                                         <span>Source code</span>
                                         <i class="ri-github-line"></i>
                                     </a>
@@ -261,21 +261,21 @@
                         <!-- PROJECT 3 -->
                         <div class="projects__content swiper-slide">
                             <a href="https://youtu.be/ayVUSVRPLqE" target="_blank">
-                                <img src="assets/img/proj3.png" alt="project image" class="projects__img">
+                                <img src="assets/img/proj3.png" alt="project image" class="projects__img" loading="lazy">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Network infrastructure design</span>
                                 <h1 class="projects__title">Campus Network Simulator</h1>
                                 <div class="projects__button-contents" id="project3-buttons">
-                                    <a href="https://youtu.be/ayVUSVRPLqE" target="_blank" class="projects__button">
+                                    <a href="https://youtu.be/ayVUSVRPLqE/" target="_blank" class="projects__button">
                                         <span>Video demo</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>
-                                    <a href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view" target="_blank" class="projects__button">
+                                    <a href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view/" target="_blank" class="projects__button">
                                         <span>View doc</span>
                                         <i class="ri-drive-line"></i>
                                     </a>
-                                    <a href="https://drive.usercontent.google.com/u/0/uc?id=1HVgYZu9RMIlfEn8bxssOG3lytE-uWUOh&export=download" class="projects__button">
+                                    <a href="https://drive.usercontent.google.com/u/0/uc?id=1HVgYZu9RMIlfEn8bxssOG3lytE-uWUOh&export=download/" class="projects__button">
                                         <span>Download pkt</span>
                                         <i class="ri-download-2-line"></i>
                                     </a>
@@ -285,7 +285,7 @@
                         <!-- PROJECT 4 -->
                         <div class="projects__content swiper-slide"> 
                             <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank">
-                                <img src="assets/img/proj4.png" alt="project image" class="projects__img">
+                                <img src="assets/img/proj4.png" alt="project image" class="projects__img" loading="lazy">
                             </a>
                             <div>
                                 <span class="projects__subtitle">4+1 diagrams of food delivery system</span>
@@ -819,7 +819,7 @@
                             <span class="contact__data-title">
                                 <i class="fa-brands fa-discord"></i>Discord
                             </span>
-                            <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__link">
+                            <a href="https://discordapp.com/users/1233363421207199827/" target="_blank" class="contact__link">
                                 <span class="contact__data-info">@ ryoichihomma</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
@@ -894,13 +894,13 @@
                     <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link" title="my linkedin profile"> 
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
-                    <a href="https://github.com/" target="_blank" class="footer__social-link" title="my github profile"> 
+                    <a href="https://github.com/Ryo-samurai6340/" target="_blank" class="footer__social-link" title="my github profile"> 
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="footer__social-link" title="my discord profile"> 
+                    <a href="https://discordapp.com/users/1233363421207199827/" target="_blank" class="footer__social-link" title="my discord profile"> 
                         <i class="fa-brands fa-discord"></i>
                     </a>
-                    <a href="https://www.youtube.com/@rh.project_gallery" target="_blank" class="footer__social-link" title="my youtube channel"> 
+                    <a href="https://www.youtube.com/@rh.project_gallery/" target="_blank" class="footer__social-link" title="my youtube channel"> 
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </li>
