Remove loading="lazy" attribute from project images.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <!-- PROJECT 1 -->
                         <div class="projects__content swiper-slide"> 
                             <a href="https://ai-visual-doppelganger.onrender.com/" target="_blank">
-                                <img src="assets/img/proj1.jpg" alt="project image" class="projects__img" loading="lazy">
+                                <img src="assets/img/proj1.jpg" alt="project image" class="projects__img">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Image replication web app</span>
@@ -241,7 +241,7 @@
                         <!-- PROJECT 2 -->
                         <div class="projects__content swiper-slide">
                             <a href="https://youtu.be/N_yUfrnbgWI/" target="_blank">
-                                <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img" loading="lazy">
+                                <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Food delivery app on Android</span>
@@ -261,7 +261,7 @@
                         <!-- PROJECT 3 -->
                         <div class="projects__content swiper-slide">
                             <a href="https://youtu.be/ayVUSVRPLqE" target="_blank">
-                                <img src="assets/img/proj3.png" alt="project image" class="projects__img" loading="lazy">
+                                <img src="assets/img/proj3.png" alt="project image" class="projects__img">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Network infrastructure design</span>
@@ -285,7 +285,7 @@
                         <!-- PROJECT 4 -->
                         <div class="projects__content swiper-slide"> 
                             <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank">
-                                <img src="assets/img/proj4.png" alt="project image" class="projects__img" loading="lazy">
+                                <img src="assets/img/proj4.png" alt="project image" class="projects__img">
                             </a>
                             <div>
                                 <span class="projects__subtitle">4+1 diagrams of food delivery system</span>
