--- a/index.html
+++ b/index.html
@@ -304,7 +304,6 @@
                                     </a>
                                     <a href="https://drive.usercontent.google.com/u/0/uc?id=1HVgYZu9RMIlfEn8bxssOG3lytE-uWUOh&export=download/" class="projects__button">
                                         <span>Download pkt</span>
-                                        <!-- <i class="ri-download-2-line"></i> -->
                                         <i class='bx bx-download'></i>
                                     </a>
                                 </div>
@@ -871,9 +870,9 @@
                         <button class="download__button" type="button">
                             <span class="download__button-text">Download CV</span>
                             <span class="download__button-icon">
-                                <!-- <i class="fa-solid fa-download bx-fade-down" style="margin-bottom: 1rem; font-size: 15px;"></i> -->
+                                <i class="fa-solid fa-download bx-fade-down" style="margin-bottom: 1rem; font-size: 15px;"></i>
                                 <!-- <i class="ri-download-2-fill bx-fade-down" style="margin-bottom: 1rem; font-size: 17px;"></i> -->
-                                <i class='bx bxs-download bx-fade-down' style="font-size: 20px; margin-top: -1rem;"></i>
+                                <!-- <i class='bx bxs-download bx-fade-down' style="font-size: 20px; margin-top: -1rem;"></i> -->
                             </span>
                         </button>
                     </div>
@@ -958,7 +957,6 @@
     <!-- SCROLL UP -->
     <a href="#home" class="scrollup" id="scroll-up" title="scrollup icon">
         <i class='bx bxs-upvote bx-fade-up'></i>
-        <!-- <i class="bi bi-hand-index-thumb bx-fade-up"></i> -->
     </a>
     <!-- ScrollRevealJS -->
     <script src="https://unpkg.com/scrollreveal"></script>
