Update download button icon

--- a/index.html
+++ b/index.html
@@ -870,9 +870,9 @@
                         <button class="download__button" type="button">
                             <span class="download__button-text">Download CV</span>
                             <span class="download__button-icon">
-                                <i class="fa-solid fa-download bx-fade-down" style="margin-bottom: 1rem; font-size: 15px;"></i>
-                                <!-- <i class="ri-download-2-fill bx-fade-down" style="margin-bottom: 1rem; font-size: 17px;"></i> -->
-                                <!-- <i class='bx bxs-download bx-fade-down' style="font-size: 20px; margin-top: -1rem;"></i> -->
+                                <!-- <i class="fa-solid fa-download bx-fade-down"></i> -->
+                                <!-- <i class="ri-download-2-fill bx-fade-down"></i> -->
+                                <i class='bx bxs-download bx-fade-down'></i>
                             </span>
                         </button>
                     </div>
