--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                         <p class="contact__status" id="contact-status"></p>
                         <button type="submit">
                             <span>Submit</span>
-                            <i class='bx bxs-plane-take-off bx-fade-right'></i>
+                            <i class='bx bxs-plane-take-off bx-fade-right' id="flight-icon"></i>
                         </button>
                     </form>
                 </div>
