--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="profile__card-bottom">
                             <div class="social-buttons-container">
                                 <button class="social-button social-button1" title="linkedin button">
-                                    <a class="linkedin-button" href="https://www.linkedin.com/" target="_blank" title="my linkedin profile">
+                                    <a class="linkedin-button" href="https://www.linkedin.com/in/ryoichihomma-jp-ca/" target="_blank" title="my linkedin profile">
                                         <!-- <svg id="linkedin" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                                         </svg> -->
@@ -251,7 +251,7 @@
                                 <h1 class="projects__title">AI Visual Doppelganger</h1>
                                 <div class="projects__button-contents" id="project1-buttons">
                                     <a href="https://youtu.be/VT6eddrVVOA/" target="_blank" class="projects__button">
-                                        <span>Video demo</span>
+                                        <span>Demo video</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>  
                                     <a href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger/" target="_blank" class="projects__button">
@@ -275,7 +275,7 @@
                                 <h1 class="projects__title">PlateMate</h1>
                                 <div class="projects__button-contents" id="project2-buttons">
                                     <a href="https://youtu.be/N_yUfrnbgWI/" target="_blank" class="projects__button">
-                                        <span>Video demo</span>
+                                        <span>Demo video</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>    
                                     <a href="https://github.com/Ryo-samurai6340/PlateMate-food-delivery-Android-app/" target="_blank" class="projects__button">
@@ -295,7 +295,7 @@
                                 <h1 class="projects__title">Campus Network Simulator</h1>
                                 <div class="projects__button-contents" id="project3-buttons">
                                     <a href="https://youtu.be/ayVUSVRPLqE/" target="_blank" class="projects__button">
-                                        <span>Video demo</span>
+                                        <span>Demo video</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>
                                     <a href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view/" target="_blank" class="projects__button">
@@ -319,7 +319,7 @@
                                 <h1 class="projects__title">PlateMate Architecture</h1>
                                 <div class="projects__button-contents" id="project4-buttons">
                                     <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank" class="projects__button">
-                                        <span>View demo</span>
+                                        <span>Prezi demo</span>
                                         <i class="ri-slideshow-2-line"></i>
                                     </a>
                                 </div>
@@ -847,11 +847,11 @@
                             </a>
                         </div>
                         <div class="contact__data"> 
-                            <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__link linkedin">
+                            <a href="https://www.linkedin.com/in/ryoichihomma-jp-ca/" target="_blank" class="contact__link linkedin">
                                 <span class="contact__data-title">
                                     <i class="bi bi-linkedin"></i>LinkedIn
                                 </span>
-                                <span class="contact__data-info">@ryoichi-homma-jp-to-ca</span>
+                                <span class="contact__data-info">@ryoichihomma-jp-ca</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
@@ -933,7 +933,7 @@
             </ul>
             <ul class="footer__social">
                 <li class="footer__social-item">
-                    <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link" title="my linkedin profile"> 
+                    <a href="https://www.linkedin.com/in/ryoichihomma-jp-ca/" target="_blank" class="footer__social-link" title="my linkedin profile"> 
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
                     <a href="https://github.com/Ryo-samurai6340/" target="_blank" class="footer__social-link" title="my github profile"> 
