Rewrite job title in credentials section

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                             <!-- Credential data (left side:nth-child(1)) -->
                             <div class="credentials__data">
                                 <h3 class="credentials__name">
-                                    Shift Leader | Chef | Server
+                                    Shift Leader | Sushi Chef | Server
                                 </h3>
                                 <span class="credentials__location">Akindo Sushiro, Japan</span>
                                 <div class="credentials__duration">
@@ -805,12 +805,11 @@
                             <!-- Credential data (left side:nth-child(1)) -->
                             <div class="credentials__data">
                                 <h3 class="credentials__name">
-                                    Personal | Fitness Trainer
+                                    Personal Trainer | Fitness Trainer
                                 </h3>
                                 <span class="credentials__location">Central Sports, Japan</span>
                                 <div class="credentials__duration">
-                                    <i class="bi bi-calendar-week"></i>Apr. - Aug. 2022<br>
-                                    <i class="bi bi-calendar-week"></i>May - Aug. 2023
+                                    <i class="bi bi-calendar-week"></i>Apr. - Aug. 2022 | May - Aug. 2023
                                 </div>
                             </div>
                             <div>
