Update Home section

--- a/index.html
+++ b/index.html
@@ -185,10 +185,13 @@
                         </p> 
                     </div>
                     <div class="home__info-languages"> 
-                        <h3 class="home__info-title">NATURAL LANGUAGES</h3>
+                        <h3 class="home__info-title">SOFT SKILLS</h3>
                         <p class="home__info-description">
-                            Japanese (native)<br>
-                            English (fluent)
+                            Cooperative Teamwork<br>
+                            Quick Adaptability<br>
+                            Critical Thinking<br>
+                            Leadership<br>
+                            Japanese, etc.
                         </p>
                     </div>
                     <div class="home__info-contact">
@@ -207,7 +210,7 @@
                 <!-- Home Info-2 (Right side:nth-chile(3)) -->
                 <div class="home__info">
                     <div class="home__info-years"> 
-                        <h3 class="home__info-title">YEARS OF EXPERIENCE</h3>
+                        <h3 class="home__info-title">YEARS OF CODING EXPERIENCE</h3>
                         <p class="home__info-number">03+</p>
                     </div>
                     <div class="home__info-projects"> 
@@ -215,9 +218,7 @@
                         <p class="home__info-number">06+</p>
                     </div>
                     <div class="home__info-companies"> 
-                        <h3 class="home__info-title">
-                            COMPANIES WORKED<br>(non-tech industries)
-                        </h3>
+                        <h3 class="home__info-title">COMPANIES WORKED<br>(non-tech industries)</h3>
                         <p class="home__info-number">04</p>
                     </div>
                 </div>
