Update career and CV

--- a/index.html
+++ b/index.html
@@ -810,12 +810,30 @@
                                 </h3>
                                 <span class="credentials__location">Central Sports, Japan</span>
                                 <div class="credentials__duration">
-                                    <i class="bi bi-calendar-week"></i>Apr. - Aug. 2022 | May - Aug. 2023
+                                    <i class="bi bi-calendar-week"></i>Apr. 2022 - Aug. 2022
                                 </div>
                             </div>
                             <div>
                                 <span class="credentials__sphere-point"></span>
+                                <span class="credentials__line"></span>
+                            </div>
+                        </div>
+
+                        <div class="credentials__info">
+                            <div></div>
+                            <div>
+                                <span class="credentials__sphere-point"></span>
                                 <!-- <span class="credentials__line"></span> -->
+                            </div>
+                            <!-- Credential data (right side:nth-child(3)) -->
+                            <div class="credentials__data">
+                                <h3 class="credentials__name">AI Trainer</h3>
+                                <span class="credentials__location">
+                                    Outlier AI, USA (full remote)
+                                </span>
+                                <div class="credentials__duration">
+                                    <i class="bi bi-calendar-week"></i>Jun. 2024 - Present
+                                </div>
                             </div>
                         </div>
 
@@ -876,7 +894,7 @@
                     </div>
 
                     <div class="download__button-container">
-                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1suA1hDut4BCLoaN7DN8WpbDn7wHrf-bB&export=download">
+                        <a href="https://drive.usercontent.google.com/u/0/uc?id=1qErhOSd71FfeGCoFKWv61_h8Z3x3LouE&export=download">
                             <button class="download__button" type="button">
                                 <span class="download__button-text">Download CV</span>
                                 <span class="download__button-icon">
