Update link for doc file

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                             Cooperative Teamwork<br>
                             Quick Adaptability<br>
                             Critical Thinking<br>
-                            Leadership<br>
-                            Japanese, etc.
+                            Problem Solving<br>
+                            Leadership, etc.<br>
                         </p>
                     </div>
                     <div class="home__info-contact">
@@ -218,8 +218,8 @@
                         <p class="home__info-number">06+</p>
                     </div>
                     <div class="home__info-companies"> 
-                        <h3 class="home__info-title">COMPANIES WORKED<br>(non-tech industries)</h3>
-                        <p class="home__info-number">04</p>
+                        <h3 class="home__info-title">COMPANIES WORKED<br>(non-tech roles)</h3>
+                        <p class="home__info-number">05</p>
                     </div>
                 </div>
             </div>
@@ -290,7 +290,7 @@
                                         <span>Demo video</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>
-                                    <a href="https://drive.google.com/file/d/1Vwx_IHxaEZhYm3UuTuRJGpfWNvUzUhOk/view?usp=sharing" target="_blank" class="projects__button">
+                                    <a href="https://drive.google.com/file/d/1EPAgZVmzu8FohEzQUeSY3xldoKdnoyNy/view" target="_blank" class="projects__button">
                                         <span>View doc</span>
                                         <i class="ri-drive-line"></i>
                                     </a>
@@ -829,7 +829,7 @@
                             <div class="credentials__data">
                                 <h3 class="credentials__name">AI Trainer</h3>
                                 <span class="credentials__location">
-                                    Outlier AI, USA (full remote)
+                                    Outlier, US (full remote)
                                 </span>
                                 <div class="credentials__duration">
                                     <i class="bi bi-calendar-week"></i>Jun. 2024 - Present
