Move script codes into head and apply 'defer'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <!-- JS Link -->
+    <script src="assets/js/script.js" defer></script>
+    <!-- ScrollRevealJS -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <!-- SwiperJS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- ValidatorJS -->
+    <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
+    <!-- EmailJS -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init({
+                publicKey: "JlD8T5SOu2dXKRnSW",
+            });
+        })();
+    </script>
     <title>Ryoichi Homma - Portfolio</title>
 </head>        
 
@@ -988,25 +1007,5 @@
     <a href="#home" class="scrollup" id="scroll-up" title="scrollup icon">
         <i class='bx bxs-upvote bx-fade-up'></i>
     </a>
-    <!-- ScrollRevealJS -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-    <!-- SwiperJS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- ValidatorJS -->
-    <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
-    <!-- EmailJS -->
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init({
-                publicKey: "JlD8T5SOu2dXKRnSW",
-            });
-        })();
-    </script>
-    <!-- MAIN -->
-    <script src="assets/js/main.js"></script>
 </body>
 </html>
