--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
                                 <!-- Hi, there!<br>I'm Ryoichi Homma, -->
                             </span>
                             <span class="profile__card-description" id="job-titles">
-                                <br>
-                                <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=500&size=50&duration=1000&pause=750&color=6818F7E8&vCenter=true&multiline=true&width=950&height=500&lines=Hi+there!+I+am;Ryoichi+(Rio)+Homma%E2%9A%BE;Your+future+favorite;full-stack+developer%2C;as+well+as+software+engineer%2C;specializing+in+the+MERN+stack;with+an+AI+evaluator+background." alt="Typing SVG" /></a>
-                                <!-- <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=500&size=50&duration=1000&pause=750&color=215FFFE0&vCenter=true&multiline=true&width=950&height=500&lines=Hi+there!+I+am;Ryoichi+(Rio)+Homma%E2%9A%BE;Your+future+favorite;full-stack+developer%2C;as+well+as+software+engineer%2C;specializing+in+the+MERN+stack;with+an+AI+evaluator+background." alt="Typing SVG" /> -->
+                                <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=400&size=45&duration=700&pause=500&color=6818F7E8&vCenter=true&multiline=true&width=950&height=600&lines=Hi+there!+I+am;Ryoichi+(Rio)+Homma%E2%9A%BE;Your+future+favorite;full-stack+developer%2C+;as+well+as+software+engineer%2C;specializing+in+the+MERN+stack;with+an+AI+evaluator+background.;;I'm+actively+looking+for;software+developer%2Fengineer;roles+in+Canada%F0%9F%8D%81" alt="Typing SVG" />
+                                <!-- <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=400&size=45&duration=700&pause=500&color=215FFFE0&vCenter=true&multiline=true&width=950&height=600&lines=Hi+there!+I+am;Ryoichi+(Rio)+Homma%E2%9A%BE;Your+future+favorite;full-stack+developer%2C+;as+well+as+software+engineer%2C;specializing+in+the+MERN+stack;with+an+AI+evaluator+background.;;I'm+actively+looking+for;software+developer%2Fengineer;roles+in+Canada%F0%9F%8D%81" alt="Typing SVG" /> -->
                             </span>
                         </div>
                         <div class="profile__card-bottom">
